# project-unification

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  version.cmake
config/: .gitignore
libs/libtorch/: CMakeLists.txt
libs/libtorch/include/libtorch/: libtorch.h
libs/protobufs/: CMakeLists.txt
libs/protobufs/include/protobufs/: protobufs.h
libs/protobufs/include/protobufs/pb/proto/: ssl_simulation_config.proto  ssl_vision_geometry.proto  ssl_visualization.proto  vssref_common.proto
scripts/: essentials.txt
src/: CMakeLists.txt  main.cpp
src/AbstractModules/: AbstractModules.h
src/AbstractModules/Acting/: Acting.cpp  Acting.h
src/AbstractModules/Processing/: Processing.cpp  Processing.h
src/AbstractModules/Vision/: Vision.cpp  Vision.h
src/Entities/: Entities.cpp  Entities.h
src/Field/: Field.cpp  Field.h
src/Modules/: Modules.cpp  Modules.h
src/Modules/Acting/FIRASimComm/: FIRASimComm.cpp  FIRASimComm.h
src/Modules/Acting/FIRASimComm/FIRASimCommUtils/: FIRASimCommUtils.cpp  FIRASimCommUtils.h
src/Modules/Acting/GrSimComm/: GrSimComm.cpp  GrSimComm.h
src/Modules/Acting/GrSimComm/GrSimCommUtils/: GrSimCommUtils.cpp  GrSimCommUtils.h
src/Modules/Processing/CustomPlayer/: CustomPlayer.cpp  CustomPlayer.h
src/Modules/Processing/Joystick/: Joystick.cpp  Joystick.h
src/Modules/Processing/MouseAndKeyboard/: MouseAndKeyboard.cpp  MouseAndKeyboard.h
src/Modules/Processing/MouseAndKeyboard/SSLNavigation/: SSLNavigation.h
src/Modules/Processing/ProcessingUtils/: ProcessingUtils.h
src/Modules/Processing/ProcessingUtils/SSLNavigation/: SSLNavigation.h
src/Modules/Processing/ProcessingUtils/VSSNavigation/: VSSNavigation.h
src/Modules/Processing/TurnedOff/: TurnedOff.cpp  TurnedOff.h
src/Modules/Vision/FIRASimReceiver/: FIRASimReceiver.cpp  FIRASimReceiver.h
src/Modules/Vision/GrSimReceiver/: GrSimReceiver.cpp  GrSimReceiver.h
src/Modules/Vision/VisionUtils/: VisionUtils.h
src/Modules/Vision/VisionUtils/DrawCIninho/: DrawCIninho.cpp  DrawCIninho.h
src/Modules/Vision/VisionUtils/DrawField/: DrawField.cpp  DrawField.h
src/Modules/Vision/VisionUtils/DrawGameContext/: DrawGameContext.cpp  DrawGameContext.h
src/Modules/Vision/VisionUtils/DrawSSLClient/: DrawSSLClient.h
src/Modules/Vision/VisionUtils/DrawSSLClient/DrawSSLClientDetection/: DrawSSLClientDetection.cpp  DrawSSLClientDetection.h
src/Modules/Vision/VisionUtils/DrawSSLClient/DrawSSLClientField/: DrawSSLClientField.cpp  DrawSSLClientField.h
src/Modules/Vision/VisionUtils/LossDetection/: LossDetection.cpp  LossDetection.h
src/ThreadPools/: ThreadPools.cpp  ThreadPools.h
test/: CMakeLists.txt
